# BookingGuard_MLOps

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docs/: architectural_decisions.md  architecture.md  branching_strategy.md
scripts/: run_api.py  train.py
src/: __init__.py  container.py  exceptions.py
src/api/: __init__.py  app.py  schemas.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  loader.py  validator.py
src/features/: __init__.py  engineer.py  preprocessor.py  store.py
src/models/: __init__.py  predictor.py  trainer.py
src/pipelines/: __init__.py  inference.py  training.py
src/utils/: logging_config.py
tests/: __init__.py
tests/unit/: test_api.py  test_config.py  test_container.py  test_data_validator.py  test_exceptions.py  test_feature_engineer.py  test_feature_store.py
